refactor: replace N+1 channel queries with batch loading via   findAllByChannelIdIn